--- a/index.html
+++ b/index.html
@@ -821,7 +821,7 @@
           <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-block-website-generator.html">Block Websites Generator</a><img class="member-only" title="Member only" src="./img/user.png"></p>
         </div>
       </div>
-      <div style="border-top:1px solid #ccc; margin-top:15px; padding-top:10px"><span style="font-size:16px;font-weight:500">☰ ROUTEROS OTHER TOOLS</span></div>
+      <div style="border-top:1px solid #ccc; margin-top:15px; padding-top:10px"><span style="font-size:16px;font-weight:500">☰ ROUTER-OS OTHER TOOLS</span></div>
       <div class="row">
         <div class="column">
           <p><a target="_blank"  href="https://buananetpbun.github.io/pcc-calculation.html">Load Balancing PCC Calculation</a><img class="member-only" title="Member only" src="./img/user.png"></p>
@@ -831,7 +831,7 @@
           <p><a target="_blank"  href="https://buananetpbun.github.io/wifid-wms-seamless.html">Wifi.id WMS and Seamless Auto Login</a><img class="member-only" title="Member only" src="./img/user.png"></p>
         </div>
       </div>
-      <h2>// MIKROTIK TOOLS AND LOGO DESIGNS OFFICIAL</h3>
+      <h2>// MIKROTIK TOOLS AND LOGO DESIGNS</h3>
       <div class="row">
         <div class="column">
           <p><a target="_blank" rel="nofollow"  href="https://mt.lv/winbox64">Winbox-64 (64bit)</a></p>
@@ -848,7 +848,7 @@
           <p><a target="_blank" rel="nofollow"  href="https://designs.mikrotik.com/">MikroTik Logo, Walpaper, T-Shirt</a></p>
         </div>
       </div>
-      <h2>// MIKROTIK MOBILE TOOLS OFFICIAL</h3>
+      <h2>// MIKROTIK MOBILE TOOLS</h3>
       <div class="row">
         <div class="column">
           <p><a target="_blank" rel="nofollow"  href="https://apps.apple.com/id/app/mikrotik/id1323064830?l=id">MikroTik Winbox iPhone</a></p>
@@ -859,7 +859,7 @@
           <p><a target="_blank" rel="nofollow"  href="https://play.google.com/store/apps/details?id=com.mikrotik.android.bt5">MikroTik Beacon Manager</a></p>
         </div>
       </div>
-      <h2>// MIKROTIK ROUTEROS SOFTWARE DOWNLOAD OFFICIAL</h3>
+      <h2>// MIKROTIK ROUTEROS SOFTWARE DOWNLOAD</h3>
       <div class="row">
         <div class="column">
           <p><a target="_blank" rel="nofollow"  href="https://mikrotik.com/download">Mikrotik RouterOS Download Official</a></p>
@@ -868,7 +868,7 @@
           <p><a target="_blank" rel="nofollow"  href="http://www.routeros.co.id">Routeros.co.id (Indonesia Server)</a></p>
         </div>
       </div>
-      <h2>// MIKROTIK WIRELESS TOOLS OFFICIAL</h3>
+      <h2>// MIKROTIK WIRELESS TOOLS</h3>
       <div class="row">
         <div class="column">
           <p><a target="_blank" rel="nofollow"  href="http://www.mikrotik.co.id/test_tower.php">Antenna Height Calculation</a></p>
@@ -880,7 +880,7 @@
           <p><a target="_blank" rel="nofollow"  href="https://mikrotik.com/client/distributorLockpack">Lockpack creator (need login)</a></p>
         </div>
       </div>
-      <h2>// MIKROTIK TOOLS LIKE CALCULATOR AND MONITOR</h3>
+      <h2>// MIKROTIK TOOLS CALCULATOR AND MONITOR</h3>
       <div class="row">
         <div class="column">
           <p><a target="_blank" rel="nofollow"  href="https://www.mikrotik.id/artikel_lihat.php?id=215">Traffic Monitor with Cacti linux</a></p>
@@ -896,7 +896,7 @@
           <p><a target="_blank" rel="nofollow"  href="https://www.mkesolutions.net/pdf/routeros-cheat-sheet-v1.1.pdf">PDF RouterOS Console Cheat Sheet</a></p>
         </div>
       </div>
-      <h2>// MIKROTIK BILLING HOTSPOT / RADIUS / USERMANAGER</h3>
+      <h2>// MIKROTIK BILLING HOTSPOT, PPPOE RADIUS</h3>
       <div class="row">
         <div class="column">
           <p><a target="_blank" rel="nofollow"  href="https://freeradius.org">FREERADIUS</a></p>
