--- a/index.html
+++ b/index.html
@@ -528,6 +528,9 @@
       float: left;
       width: 50%;
       }
+      .column a{
+	  font-weight:500
+      }	  
       .row:after {
       content: "";
       display: table;
