--- a/index.html
+++ b/index.html
@@ -561,6 +561,7 @@
       border: 2px solid #292929;
       }
       .terminal {
+	  margin-top:10px;
       margin-bottom:15px;
       width:100%; 
       }
@@ -715,9 +716,6 @@
       </div>
     </div>
     <div class="content">
-      <div class="terminal">    
-        <img src="./img/terminal.png" alt="MikroTik Terminal">
-      </div>
       <div style="float:left; margin-right:5px; margin-top:8px; ">
         <div class="fb-like" data-href="https://www.facebook.com/buananetmikrotik" data-width="" data-layout="button_count" data-action="like" data-size="small" data-share="false"></div>
       </div>
@@ -747,8 +745,11 @@
         <div class="gcse-searchresults"></div>
       </div>
       <h1>MikroTik RouterOS</span> Script and Tools</h1>
-      <h2>// MIKROTIK <span style="color:#ff6600">[</span> SCRIPT <span style="color:#ff6600">]</span> ROUTEROS DATABASE</h3>
-      <div class="row">
+	  <div class="terminal">    
+        <img src="./img/terminal.png" alt="MikroTik Terminal">
+      </div>
+      <h2>// MIKROTIK <span style="color:#ff6600">[</span> SCRIPT <span style="color:#ff6600">]</span> ROUTEROS DATABASE</h3>    
+	  <div class="row">
         <div class="column">
           <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik">MikroTik RouterOS Script DataBase</a><img class="member-only" title="Member only" src="./img/user.png"></p>
         </div>
