--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
       padding:0;
       color:#292929;
       }
-      h1{font-size: 52px; font-weight:500; margin-bottom:0px; color:#292929;display:inline;clear:both}
-	  h2{font-weight:600; font-size:19px; color:#292929;border-bottom:1px solid #ccc; margin-bottom:10px; padding-bottom:10px;}
+      h1{font-size: 52px; font-weight:500;color:#292929;display:inline;}
+	  h2{font-weight:600; font-size:19px; color:#292929;border-bottom:1px solid #ccc;}
       h3, h4, h5, h6{font-weight:normal; font-size:17px; color:#292929; margin-bottom:10px; padding-bottom:10px;}
       pre {
       white-space: -moz-pre-wrap; /* Mozilla, supported since 1999 */
@@ -726,7 +726,11 @@
       <div style="float:right;width:300px;">
         <div class="gcse-searchbox"></div>
       </div>
+	  
       <div style="clear:both;"></div>
+	        <div style="margin-bottom:-20px; margin-top:-12px">
+        <div class="gcse-searchresults"></div>
+      </div>
       <div class="logo">
         <div class="logo-right" style="float:right;">     
           <a class="github-button" style="padding-right:5px !important" href="https://github.com/buananetpbun" data-show-count="true" aria-label="Follow">Follow</a> 
@@ -739,10 +743,6 @@
         <div class="logo-left">	  
           <a href="https://buananetpbun.github.io"><img alt="buananetpbun.github.io" style="float:left; margin-top:-10px;margin-right:10px" height="60" width="70" src="./img/mylogo.png"><span style="color:#ff6600 !important">BuanaNETPBun</span>.Github.io</a>
         </div>
-      </div>
-      <div style="clear:both;"></div>
-      <div style="margin-bottom:-20px; margin-top:-12px">
-        <div class="gcse-searchresults"></div>
       </div>
       <h1>MikroTik RouterOS</span> Script and Tools</h1>
 	  <div class="terminal">    
