--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
       padding:0;
       color:#292929;
       }
-      h1{font-size: 52px; font-weight:500;color:#292929;display:inline;}
-	  h2{font-weight:600; font-size:19px; color:#292929;border-bottom:1px solid #ccc;}
+      h1{font-size: 52px; font-weight:500; margin-bottom:0px; color:#292929;display:inline;clear:both}
+	  h2{font-weight:600; font-size:19px; color:#292929;border-bottom:1px solid #ccc; margin-bottom:10px; padding-bottom:10px;}
       h3, h4, h5, h6{font-weight:normal; font-size:17px; color:#292929; margin-bottom:10px; padding-bottom:10px;}
       pre {
       white-space: -moz-pre-wrap; /* Mozilla, supported since 1999 */
@@ -561,7 +561,6 @@
       border: 2px solid #292929;
       }
       .terminal {
-	  margin-top:10px;
       margin-bottom:15px;
       width:100%; 
       }
@@ -716,6 +715,9 @@
       </div>
     </div>
     <div class="content">
+      <div class="terminal">    
+        <img src="./img/terminal.png" alt="MikroTik Terminal">
+      </div>
       <div style="float:left; margin-right:5px; margin-top:8px; ">
         <div class="fb-like" data-href="https://www.facebook.com/buananetmikrotik" data-width="" data-layout="button_count" data-action="like" data-size="small" data-share="false"></div>
       </div>
@@ -726,11 +728,7 @@
       <div style="float:right;width:300px;">
         <div class="gcse-searchbox"></div>
       </div>
-	  
       <div style="clear:both;"></div>
-	        <div style="margin-bottom:-20px; margin-top:-12px">
-        <div class="gcse-searchresults"></div>
-      </div>
       <div class="logo">
         <div class="logo-right" style="float:right;">     
           <a class="github-button" style="padding-right:5px !important" href="https://github.com/buananetpbun" data-show-count="true" aria-label="Follow">Follow</a> 
@@ -744,12 +742,13 @@
           <a href="https://buananetpbun.github.io"><img alt="buananetpbun.github.io" style="float:left; margin-top:-10px;margin-right:10px" height="60" width="70" src="./img/mylogo.png"><span style="color:#ff6600 !important">BuanaNETPBun</span>.Github.io</a>
         </div>
       </div>
-      <h1>MikroTik RouterOS</span> Script and Tools</h1>
-	  <div class="terminal">    
-        <img src="./img/terminal.png" alt="MikroTik Terminal">
+      <div style="clear:both;"></div>
+      <div style="margin-bottom:-15px; margin-top:-12px">
+        <div class="gcse-searchresults"></div>
       </div>
-      <h2>// MIKROTIK <span style="color:#ff6600">[</span> SCRIPT <span style="color:#ff6600">]</span> ROUTEROS DATABASE</h3>    
-	  <div class="row">
+      <h1>MikroTik RouterOS</span> Script and Tools</h1>
+      <h2>// MIKROTIK <span style="color:#ff6600">[</span> SCRIPT <span style="color:#ff6600">]</span> ROUTEROS DATABASE</h3>
+      <div class="row">
         <div class="column">
           <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik">MikroTik RouterOS Script DataBase</a><img class="member-only" title="Member only" src="./img/user.png"></p>
         </div>
