--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
       padding:0;
       color:#292929;
       }
-      h1{font-size: 52px; font-weight:500; margin-bottom:0px; color:#292929;display:inline;clear:both}
-	  h2{font-weight:600; font-size:19px; color:#292929;border-bottom:1px solid #ccc; margin-bottom:10px; padding-bottom:10px;}
+      h1{font-size: 50px; font-weight:700; margin-bottom:0px; color:#292929;display:inline;clear:both}
+	  h2{font-weight:bold; font-size:19px; color:#292929;border-bottom:1px solid #ccc; margin-bottom:10px; padding-bottom:10px;}
       h3, h4, h5, h6{font-weight:normal; font-size:17px; color:#292929; margin-bottom:10px; padding-bottom:10px;}
       pre {
       white-space: -moz-pre-wrap; /* Mozilla, supported since 1999 */
@@ -529,7 +529,7 @@
       width: 50%;
       }
       .column a{
-      font-weight:600;
+      font-weight:bold;
       }	  	  
       .row:after {
       content: "";
@@ -697,7 +697,7 @@
       <div class="show-login-menu" id="show-login-menu">
         <button style="width:100px !important;  padding:6px; margin:4px; font-weight:bold;font-size:14px; margin-left:12px !important" onclick="callmodalLogin();showLogin()">Login</button>
         <button style="width:100px !important; padding:6px; margin:4px; font-weight:bold;font-size:14px" onclick="javascript:callmodalLogin();showRegistration()">Sign Up</button>
-        <span class="text-join-now" style="font-size:14px; color:#ff6600; font-weight:600; margin-left:5px">Get your member now, it's free.</span>
+        <span class="text-join-now" style="font-size:14px; color:#ff6600; font-weight:bold; margin-left:5px">Get your member now, it's free.</span>
       </div>
       <div class="show-homepage-menu">
         <div id="homepage" class="hide">
@@ -757,7 +757,7 @@
         </div>
       </div>
       <h2>// MIKROTIK ROUTEROS SCRIPT GENERATOR</h3>
-      <span style="font-size:16px;font-weight:500;">☰ ROUTE <span style="color:#ff6600">//</span> MANGLE <span style="color:#ff6600">//</span> NAT</span>
+      <span style="font-size:16px;font-weight:bold;">☰ ROUTE <span style="color:#ff6600">//</span> MANGLE <span style="color:#ff6600">//</span> NAT</span>
       <div class="row">
         <div class="column">
           <p><a target="_blank"  href="https://buananetpbun.github.io/pcc.html">Load Balancing PCC</a><img class="member-only" title="Member only" src="./img/user.png"></p>
@@ -776,7 +776,7 @@
           <p><a target="_blank"  href="https://buananetpbun.github.io/vpn-game-generator2.html">VPN Routing IP Address Games</a><img class="member-only" title="Member only" src="./img/user.png"></p>
         </div>
       </div>
-      <div style="border-top:1px solid #ccc; margin-top:15px; padding-top:10px"><span style="font-size:16px;font-weight:500; ">☰ SIMPLE QUEUE <span style="color:#ff6600">//</span> QUEUE TREE <span style="color:#ff6600">//</span> QUEUE TYPE</span></div>
+      <div style="border-top:1px solid #ccc; margin-top:15px; padding-top:10px"><span style="font-size:16px;font-weight:bold; ">☰ SIMPLE QUEUE <span style="color:#ff6600">//</span> QUEUE TREE <span style="color:#ff6600">//</span> QUEUE TYPE</span></div>
       <div class="row">
         <div class="column">
           <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-burst-limit-calculator.html">Burst Limit Calculator</a><img class="member-only" title="Member only" src="./img/user.png"></p>
@@ -789,7 +789,7 @@
           <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-pcq-generator.html">PCQ for Queue Tree or Queue Simple</a><img class="member-only" title="Member only" src="./img/user.png"></p>
         </div>
       </div>
-      <div style="border-top:1px solid #ccc; margin-top:15px; padding-top:10px"><span style="font-size:16px;font-weight:500">☰ HOTSPOT <span style="color:#ff6600">//</span> PPPOE</span></div>
+      <div style="border-top:1px solid #ccc; margin-top:15px; padding-top:10px"><span style="font-size:16px;font-weight:bold">☰ HOTSPOT <span style="color:#ff6600">//</span> PPPOE</span></div>
       <div class="row">
         <div class="column">
           <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-qr-code-generator.html">Free Hotspot Wi-Fi QR Code</a><img class="member-only" title="Member only" src="./img/user.png"></p>
@@ -802,7 +802,7 @@
           <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-expired-isolate-pppoe-hotspot.html">Expired Notification Hotspot + PPPoE</a><img class="member-only" title="Member only" src="./img/user.png"></p>
         </div>
       </div>
-      <div style="border-top:1px solid #ccc; margin-top:15px; padding-top:10px"><span style="font-size:16px;font-weight:500">☰ DNS <span style="color:#ff6600">//</span> NETWATCH <span style="color:#ff6600">//</span> INTERFACE</span></div>
+      <div style="border-top:1px solid #ccc; margin-top:15px; padding-top:10px"><span style="font-size:16px;font-weight:bold">☰ DNS <span style="color:#ff6600">//</span> NETWATCH <span style="color:#ff6600">//</span> INTERFACE</span></div>
       <div class="row">
         <div class="column">
           <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-dns-over-https-doh.html">DNS over HTTPS (DoH) Servers</a><img class="member-only" title="Member only" src="./img/user.png"></p>
@@ -812,7 +812,7 @@
           <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-bonding-interface.html">Bonding Interface / Link Aggregation</a><img class="member-only" title="Member only" src="./img/user.png"></p>
         </div>
       </div>
-      <div style="border-top:1px solid #ccc; margin-top:15px; padding-top:10px"><span style="font-size:16px;font-weight:500">☰ PROTECTION <span style="color:#ff6600">//</span> BACKUP</span></div>
+      <div style="border-top:1px solid #ccc; margin-top:15px; padding-top:10px"><span style="font-size:16px;font-weight:bold">☰ PROTECTION <span style="color:#ff6600">//</span> BACKUP</span></div>
       <div class="row">
         <div class="column">
           <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-hide-my-router-from-isp.html">MikroTik Ninja: Hide Routerboard from ISP</a><img class="member-only" title="Member only" src="./img/user.png"></p>
@@ -824,7 +824,7 @@
           <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-block-website-generator.html">Block Websites Generator</a><img class="member-only" title="Member only" src="./img/user.png"></p>
         </div>
       </div>
-      <div style="border-top:1px solid #ccc; margin-top:15px; padding-top:10px"><span style="font-size:16px;font-weight:500">☰ ROUTER-OS OTHER TOOLS</span></div>
+      <div style="border-top:1px solid #ccc; margin-top:15px; padding-top:10px"><span style="font-size:16px;font-weight:bold">☰ ROUTER-OS OTHER TOOLS</span></div>
       <div class="row">
         <div class="column">
           <p><a target="_blank"  href="https://buananetpbun.github.io/pcc-calculation.html">Load Balancing PCC Calculation</a><img class="member-only" title="Member only" src="./img/user.png"></p>
