--- a/index.html
+++ b/index.html
@@ -70,8 +70,11 @@
       margin-bottom:15px;
       margin-top:10px;
       padding:25px;
+	  height:130px;
       clear:both;
       }	
+	  .logo-right {margin-top:20px;}
+	  .logo-left {margin-top:20px;}
       .logo a{
       color:#ddd !important;
       font-size:25px; 
