--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       color:#292929;
       }
       h1{font-size: 52px; font-weight:600; margin-bottom:0px; color:#292929;display:inline;clear:both}
-	  h2{font-weight:600; font-size:18px; color:#292929;border-bottom:1px solid #ccc; margin-bottom:10px; padding-bottom:10px;}
+	  h2{font-weight:bold; font-size:18px; color:#292929;border-bottom:1px solid #ccc; margin-bottom:10px; padding-bottom:10px;}
       h3, h4, h5, h6{font-weight:normal; font-size:17px; color:#292929; margin-bottom:10px; padding-bottom:10px;}
       pre {
       white-space: -moz-pre-wrap; /* Mozilla, supported since 1999 */
