--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
     <meta name="yandex-verification" content="2185da3345ca44f7" >
     <script async defer src="https://buttons.github.io/buttons.js"></script>   
     <style>
-
       /* --------------------------------------------
       ################################################
       # Tools For Mikrotik By BuanaNETPBun.Github.io
@@ -89,7 +88,7 @@
       padding: 30px;
       border-radius: 5px;
       box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
-      background:#f9f9f9;
+      background:#ffffff;
       line-height: 1.7  
       }
       /* unvisited link */
@@ -261,10 +260,10 @@
       /* The Main Menu */
       .mymenu {
       margin: 0 auto;
-      background-color: #f9f9f9;
+      background-color: #ffffff;
       width: 700px;
       border-radius: 0 0 5px 5px;
-      border: 2px solid #f9f9f9;
+      border: 2px solid #ffffff;
       font-weight: bold;
       font-size: 15px;
       position: relative;
@@ -678,7 +677,6 @@
       font-size: 10pt;
       }
       }
-    
     </style>
   </head>
   <body>
