--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
       margin: 0;
       padding: 0;
       overflow: hidden;
-      background-color: #f9f9f9;
+      background-color: #ffffff;
       margin-right: 10px;
       background: url("./img/made-for-mikrotik.png") no-repeat right !important;
       }
@@ -285,7 +285,7 @@
       }
       .mymenu li a {
       display: block;
-      color: #555;
+      color: #292929;
       text-align: center;
       padding: 8px 10px;
       text-decoration: none;
@@ -294,7 +294,7 @@
       }
       .mymenu li a:hover {
       background-color: #292929;
-      color: #ff6600;
+      color: #ffffff;
       border-radius:5px;
       }  
       button {
