--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
       word-wrap: break-word;
       margin:0;
       padding:0;
-      color:#292929;
+      color:#31363A;
       }
-      h1{font-size: 52px; font-weight:600; margin-bottom:0px; color:#292929;display:inline;clear:both}
-	  h2{font-weight:bold; font-size:18px; color:#292929;border-bottom:1px solid #ccc; margin-bottom:10px; padding-bottom:10px;}
-      h3, h4, h5, h6{font-weight:normal; font-size:17px; color:#292929; margin-bottom:10px; padding-bottom:10px;}
+      h1{font-size: 52px; font-weight:600; margin-bottom:0px; color:#31363A;display:inline;clear:both}
+	  h2{font-weight:bold; font-size:18px; color:#31363A;border-bottom:1px solid #ccc; margin-bottom:10px; padding-bottom:10px;}
+      h3, h4, h5, h6{font-weight:normal; font-size:17px; color:#31363A; margin-bottom:10px; padding-bottom:10px;}
       pre {
       white-space: -moz-pre-wrap; /* Mozilla, supported since 1999 */
       white-space: -pre-wrap; /* Opera */
@@ -285,7 +285,7 @@
       }
       .mymenu li a {
       display: block;
-      color: #292929;
+      color: #31363A;
       text-align: center;
       padding: 8px 10px;
       text-decoration: none;
