--- a/index.html
+++ b/index.html
@@ -930,7 +930,7 @@
           <p><a target="_blank"  href="https://github.com/buananetpbun/Restore-Winbox-Sessions-to-Default">Batch: Restore Winbox Session</a></p>
         </div>
       </div>
-      <br><br>
+      <br>
       <div style="line-height:normal !important; text-align:center; font-size:15px">
         Share this tool with your friends<br>
         <!-- Sharingbutton Facebook -->
@@ -986,6 +986,9 @@
         </a>
       </div>
       <div class="footer">
+	  
+	  <div style="padding-left:20px; padding-right:20px; margin-bottom:20px"><span style="color:red; font-weight:700; font-size:16px; font-style:italic">Disclaimer!</span> <span style="text-decoration:underline; font-size:11px">Update ( Friday, November 18, 2022 )</span> We are not responsible for errors, failures, damage or your router being locked due to intentional or accidental factors. we are also not under the auspices of the MikroTik company, all problems that occur are your own problem and you must accept all the risks.</div>
+	  
         © Copyright 2020-<span id="year">2022</span> <a href="https://buananetpbun.github.io">buananetpbun.github.io</a> is proudly powered by <a href="https://pages.github.com/">GitHub Pages</a> - Project by <a href="https://www.facebook.com/buananet.pbun">BuanaNet.Pbun</a> 
       </div>
     </div>
