--- a/index.html
+++ b/index.html
@@ -987,7 +987,7 @@
       </div>
       <div class="footer">
 	  
-	  <div style="padding-left:20px; padding-right:20px; margin-bottom:20px"><span style="color:red; font-weight:700; font-size:16px; font-style:italic">Disclaimer!</span> <span style="text-decoration:underline; font-size:11px">Update ( Friday, November 18, 2022 )</span> We are not responsible for any error, failure, damage or your router being locked due to intentional or unintentional factors. We are also not under the auspices of the MikroTik company, all problems that occur on your router are your own problems and you must accept all the risks.</div>
+	  <div style="font-size:13px;padding-left:20px; padding-right:20px; margin-bottom:14px; color:#666"><span style="font-weight:700; font-size:16px; padding-left:5px; padding-right:5px; border-left:6px solid red; border-right:6px solid red; color:#444 ">DISCLAIMER</span> <span style="text-decoration:underline; font-size:11px"><i>Update: (Friday, November 18, 2022)</i></span> We are not responsible for any error, failure, damage or your router being locked due to intentional or unintentional factors. We are also not under the auspices of the MikroTik company, all problems that occur on your router are your own problems and you must accept all the risks.</div>
 	  
         © Copyright 2020-<span id="year">2022</span> <a href="https://buananetpbun.github.io">buananetpbun.github.io</a> is proudly powered by <a href="https://pages.github.com/">GitHub Pages</a> - Project by <a href="https://www.facebook.com/buananet.pbun">BuanaNet.Pbun</a> 
       </div>
