--- a/index.html
+++ b/index.html
@@ -62,14 +62,13 @@
       text-decoration:none;
       font-size:25px;
       font-weight:bold; 
-      border-bottom:0px solid #ccc;
+      border:3px solid #292929;
       border-radius: 5px;
       background: #292929 url(https://user-images.githubusercontent.com/42666125/147363663-30767ef4-09af-48d6-8ea1-ee7a1c09e90f.png) no-repeat top left;
       color:#ddd;
       margin-bottom:15px;
       margin-top:10px;
       padding:25px;
-
       clear:both;
       }	
       .logo a{
@@ -633,7 +632,6 @@
       float: left;
       width: 100%;
       }
-      .hide-sponsor {display:none}
       .text-join-now {display:none}
       .show-login-menu{
       display: flex;
@@ -731,12 +729,9 @@
       <div style="clear:both;"></div>
       <div class="logo">
         <div class="logo-right" style="float:right;">     
-          <a class="github-button" style="padding-right:5px !important" href="https://github.com/buananetpbun" data-show-count="true" aria-label="Follow">Follow</a> 
+          <a class="github-button" href="https://github.com/buananetpbun" data-show-count="true" aria-label="Follow">Follow</a> 
           <a class="github-button" href="https://github.com/buananetpbun/buananetpbun.github.io" data-icon="octicon-star" data-show-count="true" aria-label="star">Star</a>
-          <a class="github-button" href="https://github.com/buananetpbun/buananetpbun.github.io/fork" data-show-count="true" data-icon="octicon-repo-forked" aria-label="Fork">Fork</a> 
-          <span class="hide-sponsor">
-          <a class="github-button hide-sponsor" href="https://github.com/sponsors/buananetpbun" data-icon="octicon-heart" aria-label="Sponsor">Sponsor</a>		
-          </span>
+          <a class="github-button" href="https://github.com/sponsors/buananetpbun" data-icon="octicon-heart" aria-label="Sponsor">Sponsor</a>		
         </div>
         <div class="logo-left">	  
           <a href="https://buananetpbun.github.io"><img alt="buananetpbun.github.io" style="float:left; margin-top:-10px;margin-right:10px" height="60" width="70" src="./img/mylogo.png"><span style="color:#ff6600 !important">BuanaNETPBun</span>.Github.io</a>
