--- a/index.html
+++ b/index.html
@@ -390,7 +390,12 @@
       height:13px;
       width:12px;
       }
-      .footer {margin-top:20px; text-align:center; font-size:14px;}
+      .footer {
+	  border-top:1px solid #ccc;
+	  padding-top:25px; 
+	  margin-top:0px; 
+	  text-align:center; 
+	  font-size:14px;}
       .show-homepage-menu{
       margin-bottom:3px;	  
       }
