--- a/index.html
+++ b/index.html
@@ -782,7 +782,7 @@
 
       <div class="footer">
 	  
-	  <div style="font-size:12px;padding-left:20px; padding-right:20px; margin-bottom:17px; color:#666"><span style="font-weight:700; font-size:14px; padding-left:6px; padding-right:6px; border-left:6px solid #555; border-right:6px solid #555; color:red ">DISCLAIMER</span> <span style="text-decoration:underline; font-size:11px"><i>Update: (Friday, November 18, 2022)</i></span> 
+	  <div style="font-size:12px;padding-left:20px; padding-right:20px; margin-bottom:17px; color:#666"><span style="font-weight:700; font-size:14px; padding-left:6px; padding-right:6px; border-left:6px solid #555; border-right:6px solid #555; color:red;margin-right:5px ">DISCLAIMER</span> <span style="text-decoration:underline; font-size:11px;margin-right:5px "><i>Update: (Friday, November 18, 2022)</i></span> 
 We are not responsible for any error, failure, damage or your router being locked due to intentional or accidental factors. We work independently, not under the auspices of the MikroTik company, all problems that occur with your router are your own problems and you must accept all the risks.</div>
 	  
         © Copyright 2020-<span id="year">2022</span> <a href="https://buananetpbun.github.io">buananetpbun.github.io</a> is proudly powered by <a href="https://pages.github.com/">GitHub Pages</a> - Project by <a href="https://www.facebook.com/buananet.pbun">BuanaNet.Pbun</a> 
