--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
       .gsc-input input{font-size:14px; color:#333; background:#fff !important; }
       .gsc-input-box {border-radius:5px; height:34px;background:#fff !important;margin-right: -6px !important; line-height:normal !important}
       .gsc-search-button-v2 {border-radius:5px !important; height:34px !important;}
-      .gsc-control-cse {background:#f9f9f9 !important;border:none !important; clear: both;}
+      .gsc-control-cse {background:#ffffff !important;border:none !important; clear: both;}
       div#container_notlike, div#container_like {
       display: none;
       }
