--- a/index.html
+++ b/index.html
@@ -743,7 +743,7 @@
         <div class="gcse-searchresults"></div>
       </div>
       <h1>MikroTik Router<i>OS</i> Script and Tools</h1>
-      <div style="font-size:12px;margin-top:10px;; color:#666"><span style="font-weight:700; font-size:14px; padding-left:6px; padding-right:6px; border-left:6px solid #555; border-right:6px solid #555; color:red;margin-right:5px ">DISCLAIMER</span> <span style="text-decoration:underline; font-size:11px;margin-right:5px "><i>Update: (November 18, 2022)</i></span> 
+      <div style="font-size:12px;margin-top:10px;; color:#666"><span style="font-weight:700; font-size:14px; padding-left:6px; padding-right:6px; border-left:6px solid #555; border-right:6px solid #555; color:red;margin-right:5px ">DISCLAIMER</span> <span style="text-decoration:underline; font-size:11px;margin-right:5px "><i>Update: (November, 2022)</i></span> 
 	We are not responsible for any error, failure, damage or your router being locked due to intentional or accidental factors. We work independently, not under the auspices of the MikroTik company, all problems that occur with your router are your own problems and you must accept all the risks. If you Agree, please continue..
       </div>
       <h2>// MIKROTIK <span style="color:#ff6600">[</span> SCRIPT <span style="color:#ff6600">]</span> ROUTEROS DATABASE</h2>
