--- a/mikrotik-burst-limit-calculator.html
+++ b/mikrotik-burst-limit-calculator.html
@@ -483,7 +483,7 @@
         <span style='color: #555; font-size:11px'>K = Kbps  /  M = Mbps</span><br>
         <span style='color: #555; font-size:11px'>Convert 1000Kbps = 1Mbps</span><br>
 		<span style='color: #555; font-size:11px'>Burst Threshold = 3/4 Max Limit</span><br>
-		<span style='color: #555; font-size:11px'>Limit-At = 1/8 Max limit</span><br>
+		<span style='color: #555; font-size:11px'>Limit At = 1/8 Max Limit</span><br>
         </span>
       </div>
       <div class="sidebar2">
