--- a/mikrotik-burst-limit-calculator.html
+++ b/mikrotik-burst-limit-calculator.html
@@ -472,9 +472,9 @@
         </div>
         <div style="margin-top:10px;font-size:14px;">
         <b>Burst Formula:</b><br>
-        <span style='color: #555'>------------------------------</span><br>
+        <div style='color: #555; margin-bottom:3px'>------------------------------</div>
         <span style='color: Crimson'>BD</span> = ( <span style='color: #191970'>BH</span> * <span style='color: DarkViolet'>BT</span> ) / <span style='color: #01A3DF'>BL</span><br>
-        <span style='color: #555'>------------------------------</span><br>
+        <div style='color: #555'>------------------------------</div>
         <span style='color: Crimson'>BD</span> = Burst Duration<br>
         <span style='color: #191970'>BH</span> = Burst Threshold<br>
         <span style='color: DarkViolet'>BT</span> &nbsp;= Burst Time<br>
