--- a/mikrotik-burst-limit-calculator.html
+++ b/mikrotik-burst-limit-calculator.html
@@ -480,10 +480,10 @@
         <span style='color: DarkViolet'>BT</span> &nbsp;= Burst Time<br>
         <span style='color: #01A3DF'>BL</span> &nbsp;= Burst Limit<br>
         <div style="margin-top:15px">
+		<span style='color: #555; font-size:11px'>Burst Threshold = Max Limit * 3/4</span><br>
+		<span style='color: #555; font-size:11px'>Limit At = Max Limit * 1/8</span><br>
 		<span style='color: #555; font-size:11px'>K = Kbps  /  M = Mbps</span><br>
-        <span style='color: #555; font-size:11px'>Convert 1000Kbps = 1Mbps</span><br>
-		<span style='color: #555; font-size:11px'>Burst Threshold = 3/4 Max Limit</span><br>
-		<span style='color: #555; font-size:11px'>Limit At = 1/8 Max Limit</span><br>
+        <span style='color: #555; font-size:11px'>Convert 1000Kbps = 1Mbps</span><br>		
 		</div>
         </div>
       </div>
