--- a/pcc.html
+++ b/pcc.html
@@ -465,7 +465,7 @@
       </div>
       <div class="footer">
         <div style="float:right">
-          © Copyright 2020-<span id="year">2022</span> <a target="_blank" href="https://buananetpbun.github.io/">BuanaNETPbun.github.io</a> is proudly powered by <a target="_blank" href="https://pages.github.com/">GitHub Pages</a> - Made for <a target="_blank" href="https://www.mikrotik.com">MikroTik RouterOS</a>
+          © Copyright 2020-<span id="year">2022</span> <a target="_blank" href="https://buananetpbun.github.io/">BuanaNETPbun.github.io</a> is proudly powered by <a target="_blank" href="https://pages.github.com/">GitHub Pages</a>
         </div>
         <span style="color:#ff6600"><b># This script for remover all script from this Generator</b></span><br>
         /ip firewall nat remove [find comment="LB By BNT"]<br>
